--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -8,37 +8,37 @@ on:
 env:
   NODE_VERSION: 18.19.0
 
-# jobs:
-#   check:
-#     runs-on: ubuntu-latest
-#     concurrency:
-#       group: ${{ github.ref }}-check-pr
-#       cancel-in-progress: true
-#
-#     steps:
-#       - uses: actions/checkout@v4
-#
-#       - run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" > ~/.npmrc
-#
-#       - uses: actions/setup-node@v4
-#         with:
-#           node-version: ${{ env.NODE_VERSION }}
-#           cache: 'npm'
-#
-#       - name: Install dependencies
-#         run: npm ci
-#
-#       - name: Check eslint
-#         run: npm run lint:check
-#
-#       - name: Typescript check
-#         run: npm run ts:check
-#
-#       - name: Stylelint check
-#         run: npm run style:check
-#
-#       - name: Build check
-#         run: npm run build -- --throw-warnings
-#
-#       - name: Commit lint PR title
-#         run: echo "${{ github.event.pull_request.title }}" | npx --no-install commitlint -g commitlint.config.js
+jobs:
+  check:
+    runs-on: ubuntu-latest
+    concurrency:
+      group: ${{ github.ref }}-check-pr
+      cancel-in-progress: true
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" > ~/.npmrc
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Check eslint
+        run: npm run lint:check
+
+      - name: Typescript check
+        run: npm run ts:check
+
+      - name: Stylelint check
+        run: npm run style:check
+
+      - name: Build check
+        run: npm run build -- --throw-warnings
+
+      - name: Commit lint PR title
+        run: echo "${{ github.event.pull_request.title }}" | npx --no-install commitlint -g commitlint.config.js
