--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,67 +4,67 @@ on:
   push:
     branches: [ prod ]
 
-# jobs:
-#   build:
-#     uses: Lomray-Software/vite-ssr-boost/.github/workflows/ssr-boost-build.yml@prod
-#     with:
-#       app-build-args: --unlock-robots
-#
-#   release:
-#     needs: [build]
-#     uses: Lomray-Software/vite-ssr-boost/.github/workflows/ssr-boost-release.yml@prod
-#     with:
-#       has-release-asset: true
-#     secrets:
-#       github-token: ${{ secrets.GITHUB_TOKEN }}
-#
-#   # inject actual version to app (only demo)
-#   inject-version:
-#     needs: [release]
-#     runs-on: ubuntu-latest
-#     concurrency:
-#       group: ${{ github.ref }}-inject-version
-#       cancel-in-progress: true
-#
-#     steps:
-#       - uses: actions/download-artifact@v4
-#         with:
-#           name: build-artifact
-#
-#       - name: Inject version
-#         uses: jacobtomlinson/gha-find-replace@v3
-#         with:
-#           find: '"APP_VERSION"'
-#           replace: '"${{ needs.release.outputs.version }}"'
-#           regex: false
-#
-#       - name: App build
-#         uses: actions/upload-artifact@v4
-#         with:
-#           name: build-artifact
-#           path: ${{ github.workspace }}
-#           overwrite: true
-#
-#   docker-build:
-#     needs: [release, inject-version]
-#     uses: Lomray-Software/vite-ssr-boost/.github/workflows/ssr-boost-docker-build.yml@prod
-#     with:
-#       registry: ghcr.io
-#       image-name: ${{ github.repository }}/web
-#       version: ${{ needs.release.outputs.version }}
-#       app-build-path: ./build
-#     secrets:
-#       github-token: ${{ secrets.GITHUB_TOKEN }}
-#
-#   deploy-aws:
-#     needs: [docker-build]
-#     uses: Lomray-Software/vite-ssr-boost/.github/workflows/ssr-boost-deploy-aws.yml@prod
-#     with:
-#       image: ${{ needs.docker-build.outputs.image-tag }}
-#       service: vite-template
-#       cluster: Development
-#       task-container-name: web
-#     secrets:
-#       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#       AWS_REGION: ${{ secrets.AWS_REGION }}
+jobs:
+  build:
+    uses: Lomray-Software/vite-ssr-boost/.github/workflows/ssr-boost-build.yml@prod
+    with:
+      app-build-args: --unlock-robots
+
+  release:
+    needs: [build]
+    uses: Lomray-Software/vite-ssr-boost/.github/workflows/ssr-boost-release.yml@prod
+    with:
+      has-release-asset: true
+    secrets:
+      github-token: ${{ secrets.GITHUB_TOKEN }}
+
+  # inject actual version to app (only demo)
+  inject-version:
+    needs: [release]
+    runs-on: ubuntu-latest
+    concurrency:
+      group: ${{ github.ref }}-inject-version
+      cancel-in-progress: true
+
+    steps:
+      - uses: actions/download-artifact@v4
+        with:
+          name: build-artifact
+
+      - name: Inject version
+        uses: jacobtomlinson/gha-find-replace@v3
+        with:
+          find: '"APP_VERSION"'
+          replace: '"${{ needs.release.outputs.version }}"'
+          regex: false
+
+      - name: App build
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-artifact
+          path: ${{ github.workspace }}
+          overwrite: true
+
+  docker-build:
+    needs: [release, inject-version]
+    uses: Lomray-Software/vite-ssr-boost/.github/workflows/ssr-boost-docker-build.yml@prod
+    with:
+      registry: ghcr.io
+      image-name: ${{ github.repository }}/web
+      version: ${{ needs.release.outputs.version }}
+      app-build-path: ./build
+    secrets:
+      github-token: ${{ secrets.GITHUB_TOKEN }}
+
+  deploy-aws:
+    needs: [docker-build]
+    uses: Lomray-Software/vite-ssr-boost/.github/workflows/ssr-boost-deploy-aws.yml@prod
+    with:
+      image: ${{ needs.docker-build.outputs.image-tag }}
+      service: vite-template
+      cluster: Development
+      task-container-name: web
+    secrets:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_REGION: ${{ secrets.AWS_REGION }}
