chore: pacakge json name update

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lomray/vite-template",
+  "name": "@aetherBytes/snakebytes",
   "version": "0.0.1",
   "type": "module",
   "scripts": {
