--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,7 +62,7 @@ jobs:
     with:
       image: ${{ needs.docker-build.outputs.image-tag }}
       service: vite-template
-      cluster: Development
+      cluster: DevCluster
       task-container-name: web
     secrets:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
