--- a/.github/workflows/release-hecate.yml
+++ b/.github/workflows/release-hecate.yml
@@ -27,8 +27,12 @@ jobs:
       cancel-in-progress: true
     steps:
       - uses: actions/checkout@v3
-      - name: Navigate to microservice directory
-        run: cd svc/hecate
+      - name: Navigate to microservice directory and Inject version
+        run: |
+          cd svc/hecate
+          echo "Injecting version ${{ needs.release.outputs.version }}"
+        # Ensures the following steps run in the correct directory
+        working-directory: ./svc/hecate
       - uses: actions/download-artifact@v4
         with:
           name: build-artifact
@@ -38,11 +42,18 @@ jobs:
           find: '"APP_VERSION"'
           replace: '"${{ needs.release.outputs.version }}"'
           regex: false
-      - name: App build
-        uses: actions/upload-artifact@v4
+        working-directory: ./svc/hecate
+      - name: App build and upload artifact
+        run: |
+          # Your build commands here, for example:
+          npm install
+          npm run build
+        working-directory: ./svc/hecate
+        # Adjust this to match your actual build and artifact upload commands
+      - uses: actions/upload-artifact@v4
         with:
           name: build-artifact
-          path: ${{ github.workspace }}/path/to/microservice
+          path: ./svc/hecate/build
           overwrite: true
 
   docker-build:
@@ -53,7 +64,6 @@ jobs:
       image-name: ${{ github.repository }}/web
       version: ${{ needs.release.outputs.version }}
       app-build-path: ./svc/hecate/build
-    # Specify the path to the directory containing the Dockerfile if it's within the microservice directory
     secrets:
       github-token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -65,7 +75,6 @@ jobs:
       service: SnakeBytes
       cluster: DevCluster
       task-container-name: web
-    # Add the directory path of the microservice if needed by the external workflow
     secrets:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
