--- a/.github/workflows/release-hecate.yml
+++ b/.github/workflows/release-hecate.yml
@@ -1,4 +1,4 @@
-name: Release app
+name: release app
 
 on:
   push:
@@ -6,41 +6,49 @@ on:
 
 jobs:
   build:
-    uses: Lomray-Software/vite-ssr-boost/.github/workflows/ssr-boost-build.yml@prod
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: svc/hecate
+    uses: lomray-software/vite-ssr-boost/.github/workflows/ssr-boost-build.yml@prod
     with:
       app-build-args: --unlock-robots
 
   release:
     needs: [build]
-    uses: Lomray-Software/vite-ssr-boost/.github/workflows/ssr-boost-release.yml@prod
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: subdirectory/path
+    uses: lomray-software/vite-ssr-boost/.github/workflows/ssr-boost-release.yml@prod
     with:
       has-release-asset: true
     secrets:
-      github-token: ${{ secrets.GITHUB_TOKEN }}
+      github-token: ${{ secrets.github_token }}
 
-  # inject actual version to app (only demo)
   inject-version:
     needs: [release]
     runs-on: ubuntu-latest
     concurrency:
       group: ${{ github.ref }}-inject-version
       cancel-in-progress: true
-
+    defaults:
+      run:
+        working-directory: subdirectory/path
     steps:
-      working-directory: "svc/hecate"
-      - uses: actions/download-artifact@v4
+      - uses: actions/download-artifact@v5
         with:
           name: build-artifact
 
-      - name: Inject version
-        uses: jacobtomlinson/gha-find-replace@v3
+      - name: inject version
+        uses: jacobtomlinson/gha-find-replace@v4
         with:
-          find: '"APP_VERSION"'
+          find: '"app_version"'
           replace: '"${{ needs.release.outputs.version }}"'
           regex: false
 
-      - name: App build
-        uses: actions/upload-artifact@v4
+      - name: app build
+        uses: actions/upload-artifact@v5
         with:
           name: build-artifact
           path: ${{ github.workspace }}
@@ -48,24 +56,33 @@ jobs:
 
   docker-build:
     needs: [release, inject-version]
-    uses: Lomray-Software/vite-ssr-boost/.github/workflows/ssr-boost-docker-build.yml@prod
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: subdirectory/path
+    uses: lomray-software/vite-ssr-boost/.github/workflows/ssr-boost-docker-build.yml@prod
     with:
       registry: ghcr.io
       image-name: ${{ github.repository }}/web
       version: ${{ needs.release.outputs.version }}
       app-build-path: ./build
     secrets:
-      github-token: ${{ secrets.GITHUB_TOKEN }}
+      github-token: ${{ secrets.github_token }}
 
   deploy-aws:
     needs: [docker-build]
-    uses: Lomray-Software/vite-ssr-boost/.github/workflows/ssr-boost-deploy-aws.yml@prod
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: subdirectory/path
+    uses: lomray-software/vite-ssr-boost/.github/workflows/ssr-boost-deploy-aws.yml@prod
     with:
       image: ${{ needs.docker-build.outputs.image-tag }}
-      service: SnakeBytes
-      cluster: DevCluster
+      service: snakebytes
+      cluster: devcluster
       task-container-name: web
     secrets:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_REGION: ${{ secrets.AWS_REGION }}
+      aws_access_key_id: ${{ secrets.aws_access_key_id }}
+      aws_secret_access_key: ${{ secrets.aws_secret_access_key }}
+      aws_region: ${{ secrets.aws_region }}
+
