--- a/.github/workflows/release-hecate.yml
+++ b/.github/workflows/release-hecate.yml
@@ -30,6 +30,7 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: build-artifact
+          path: svc/hecate
 
       - name: Inject version
         uses: jacobtomlinson/gha-find-replace@v3
