--- a/.github/workflows/ssr-boost-build.yml
+++ b/.github/workflows/ssr-boost-build.yml
@@ -13,7 +13,7 @@ on:
       docker-file:
         required: false
         type: string
-        default: node_modules/@lomray/vite-ssr-boost/workflow/Dockerfile
+        default: svc/hecate/node_modules/@lomray/vite-ssr-boost/workflow/Dockerfile
       should-skip-eslint:
         required: false
         type: boolean
@@ -29,7 +29,7 @@ on:
       service-path:
         required: false
         type: string
-        default: 'svc/hecate' 
+        default: svc/hecate
     secrets:
       github-token:
         required: false
