udpate more paths

--- a/.github/workflows/ssr-boost-build.yml
+++ b/.github/workflows/ssr-boost-build.yml
@@ -53,6 +53,7 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
+          path: ${{ inputs.service-path }}
           node-version: ${{ inputs.node-version }}
           cache: 'npm'
 
