add some service path

--- a/.github/workflows/release-hecate.yml
+++ b/.github/workflows/release-hecate.yml
@@ -9,6 +9,7 @@ jobs:
     uses: ./.github/workflows/ssr-boost-build.yml
     with:
       app-build-args: --unlock-robots
+      service-path: svc/hecate
 
   release:
     needs: [build]
