update service path

--- a/.github/workflows/ssr-boost-build.yml
+++ b/.github/workflows/ssr-boost-build.yml
@@ -29,7 +29,7 @@ on:
       service-path:
         required: true
         type: string
-        default: ../../svc/hecate
+        default: svc/hecate
     secrets:
       github-token:
         required: false
