--- a/.github/workflows/release-hecate.yml
+++ b/.github/workflows/release-hecate.yml
@@ -28,6 +28,9 @@ jobs:
       cancel-in-progress: true
 
     steps:
+      - name: change directory
+        run: cd svc/hecate
+
       - uses: actions/download-artifact@v4
         with:
           name: build-artifact
