--- a/.github/workflows/release-hecate.yml
+++ b/.github/workflows/release-hecate.yml
@@ -16,6 +16,8 @@ jobs:
     uses: Lomray-Software/vite-ssr-boost/.github/workflows/ssr-boost-release.yml@prod
     with:
       has-release-asset: true
+      release-asset-name: Hecate
+      release-asset-path: svc/hecate/build
     secrets:
       github-token: ${{ secrets.GITHUB_TOKEN }}
 
