--- a/.github/workflows/ssr-boost-release.yml
+++ b/.github/workflows/ssr-boost-release.yml
@@ -10,7 +10,11 @@ on:
       has-release-asset:
         required: false
         type: boolean
-        default: false
+        default: false 
+      service-path:
+        required: true
+        type: string
+        default: '../../svc/hecate/'
     secrets:
       github-token:
         required: true
@@ -37,16 +41,24 @@ jobs:
 
       - name: Create release asset
         if: ${{ inputs.has-release-asset }}
-        run: zip -r build.zip ${{ inputs.build-folder }} package.json package-lock.json README.md
-
+        run: |
+          cd ${{ inputs.service-path }}
+          zip -r build.zip ${{ inputs.build-folder }} package.json package-lock.json README.md
+        
       - name: Install dependencies
-        run: npm ci
+        run: |
+          cd ${{ inputs.service-path }}
+          npm ci
 
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.github-token }}
-        run: npx semantic-release
+        run: |
+          cd ${{ inputs.service-path }}
+          npx semantic-release
 
       - name: Get version
         id: package-version
-        run: npx @lomray/microservices-cli package-version
+        run: |
+          cd ${{ inputs.service-path }}
+          npx @lomray/microservices-cli package-version
