add service path

--- a/.github/workflows/release-hecate.yml
+++ b/.github/workflows/release-hecate.yml
@@ -16,6 +16,7 @@ jobs:
     uses: ./.github/workflows/ssr-boost-release.yml
     with:
       has-release-asset: true
+      service-path: svc/hecate
     secrets:
       github-token: ${{ secrets.GITHUB_TOKEN }}
 
