--- a/.github/workflows/release-hecate.yml
+++ b/.github/workflows/release-hecate.yml
@@ -2,7 +2,12 @@ name: Release Hecate
 
 on:
   push:
-    branches: [ prod ]
+    branches: [ prod ] 
+    inputs:
+      service-path:
+        required: true
+        type: string
+        default: '../../svc/hecate/'
 
 jobs:
   build:
@@ -29,9 +34,6 @@ jobs:
       cancel-in-progress: true
 
     steps:
-      - name: change directory
-        run: cd svc/hecate
-
       - uses: actions/download-artifact@v4
         with:
           name: build-artifact
