--- a/.github/workflows/release-hecate.yml
+++ b/.github/workflows/release-hecate.yml
@@ -61,6 +61,8 @@ jobs:
       image-name: ${{ github.repository }}/hecate
       version: ${{ needs.release.outputs.version }}
       app-build-path: svc/hecate/build
+      service-path: svc/hecate
+      docker-file: svc/hecate/node_modules/@lomray/vite-ssr-boost/workflow/Dockerfile
     secrets:
       github-token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -72,6 +74,7 @@ jobs:
       service: Hecate
       cluster: DevCluster
       task-container-name: hecate
+      service-path: svc/hecate
     secrets:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
