--- a/.github/workflows/release-hecate.yml
+++ b/.github/workflows/release-hecate.yml
@@ -14,7 +14,7 @@ jobs:
     uses: ./.github/workflows/ssr-boost-build.yml
     with:
       app-build-args: --unlock-robots
-      service-path: svc/hecate
+      service-path: ${{ inputs.service-path }}
 
   release:
     needs: [build]
@@ -61,8 +61,8 @@ jobs:
       image-name: ${{ github.repository }}/hecate
       version: ${{ needs.release.outputs.version }}
       app-build-path: svc/hecate/build
-      service-path: svc/hecate
-    secrets:
+      service-path: ${{ inputs.service-path }}
+      secrets:
       github-token: ${{ secrets.GITHUB_TOKEN }}
 
   deploy-aws:
@@ -73,7 +73,7 @@ jobs:
       service: Hecate
       cluster: DevCluster
       task-container-name: hecate
-      service-path: svc/hecate
+      service-path: ${{ inputs.service-path }}
     secrets:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
