--- a/.github/workflows/release-hecate.yml
+++ b/.github/workflows/release-hecate.yml
@@ -3,18 +3,13 @@ name: Release Hecate
 on:
   push:
     branches: [ prod ] 
-    inputs:
-      service-path:
-        required: true
-        type: string
-        default: svc/hecate
 
 jobs:
   build:
     uses: ./.github/workflows/ssr-boost-build.yml
     with:
       app-build-args: --unlock-robots
-      service-path: ${{ inputs.service-path }}
+      service-path: svc/hecate
 
   release:
     needs: [build]
@@ -61,7 +56,7 @@ jobs:
       image-name: ${{ github.repository }}/hecate
       version: ${{ needs.release.outputs.version }}
       app-build-path: svc/hecate/build
-      service-path: ${{ inputs.service-path }}
+      service-path: svc/hecate
     secrets:
       github-token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -73,7 +68,7 @@ jobs:
       service: Hecate
       cluster: DevCluster
       task-container-name: hecate
-      service-path: ${{ inputs.service-path }}
+      service-path: svc/hecate
     secrets:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
