--- a/.github/workflows/ssr-boost-docker-build.yml
+++ b/.github/workflows/ssr-boost-docker-build.yml
@@ -79,7 +79,7 @@ jobs:
         id: build-and-push
         uses: docker/build-push-action@v5
         with:
-          context: ${{ inputs.service-path }}
+          context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
