--- a/.github/workflows/ssr-boost-docker-build.yml
+++ b/.github/workflows/ssr-boost-docker-build.yml
@@ -88,3 +88,4 @@ jobs:
           build-args: |
             BUILD_PATH=${{ inputs.app-build-path }}
             ${{ secrets.extra-build-args }}
+            SERVICE_PATH=${{ inputs.service-path }}
