--- a/svc/hecate/Dockerfile
+++ b/svc/hecate/Dockerfile
@@ -1,6 +1,7 @@
 FROM node:18.13.0-alpine
 
 ARG BUILD_PATH
+ARG SERVICE_PATH
 ARG RUN_TYPE=ssr
 ARG ENV_MODE=production
 ARG WEB_PATH=/var/www
@@ -13,8 +14,8 @@ RUN mkdir -p $WEB_PATH
 WORKDIR $WEB_PATH
 
 COPY ${BUILD_PATH} $WEB_PATH/build
-COPY $BUILD_PATH/package.json $WEB_PATH/package.json
-COPY $BUILD_PATH/package-lock.json $WEB_PATH/package-lock.json
+COPY $SERVICE_PATH/package.json $WEB_PATH/package.json
+COPY $SERVICE_PATH/package-lock.json $WEB_PATH/package-lock.json
 
 RUN npm ci --omit=dev
 
