--- a/svc/hecate/Dockerfile
+++ b/svc/hecate/Dockerfile
@@ -1,7 +1,5 @@
 FROM node:18.13.0-alpine
 
-ARG BUILD_PATH
-ARG SERVICE_PATH
 ARG RUN_TYPE=ssr
 ARG ENV_MODE=production
 ARG WEB_PATH=/var/www
@@ -13,9 +11,9 @@ RUN mkdir -p $WEB_PATH
 
 WORKDIR $WEB_PATH
 
-COPY ${BUILD_PATH} $WEB_PATH/build
-COPY $SERVICE_PATH/package.json $WEB_PATH/package.json
-COPY $SERVICE_PATH/package-lock.json $WEB_PATH/package-lock.json
+COPY ./build/ $WEB_PATH/build
+COPY ./package.json $WEB_PATH/package.json
+COPY ./package-lock.json $WEB_PATH/package-lock.json
 
 RUN npm ci --omit=dev
 
