--- a/svc/hecate/Dockerfile
+++ b/svc/hecate/Dockerfile
@@ -3,8 +3,8 @@ FROM node:18.13.0-alpine
 ARG RUN_TYPE=ssr
 ARG ENV_MODE=production
 ARG WEB_PATH=/var/www
-ARG BUILD_PATH=./build
-ARG SERVICE_PATH=./
+ARG BUILD_PATH
+ARG SERVICE_PATH
 
 ENV NODE_ENV=${ENV_MODE}
 ENV TYPE=${RUN_TYPE}
@@ -13,8 +13,8 @@ RUN mkdir -p $WEB_PATH
 
 
 COPY ${BUILD_PATH} $WEB_PATH/build
-COPY $SERVICE_PATH/package.json $WEB_PATH/package.json
-COPY $SERVICE_PATH/package-lock.json $WEB_PATH/package-lock.json
+COPY ${SERVICE_PATH}/package.json $WEB_PATH/package.json
+COPY ${SERVICE_PATH}/package-lock.json $WEB_PATH/package-lock.json
 
 WORKDIR $WEB_PATH
 
