--- a/svc/hecate/Dockerfile
+++ b/svc/hecate/Dockerfile
@@ -4,7 +4,6 @@ ARG RUN_TYPE=ssr
 ARG ENV_MODE=production
 ARG WEB_PATH=/var/www
 ARG BUILD_PATH
-ARG SERVICE_PATH
 
 ENV NODE_ENV=${ENV_MODE}
 ENV TYPE=${RUN_TYPE}
@@ -14,8 +13,8 @@ RUN mkdir -p $WEB_PATH
 WORKDIR $WEB_PATH
 
 COPY ${BUILD_PATH} $WEB_PATH/build
-COPY ${SERVICE_PATH}/package.json $WEB_PATH/package.json
-COPY ${SERVICE_PATH}/package-lock.json $WEB_PATH/package-lock.json
+COPY ./package.json $WEB_PATH/package.json
+COPY ./package-lock.json $WEB_PATH/package-lock.json
 
 
 RUN npm ci --omit=dev
