--- a/svc/hecate/package.json
+++ b/svc/hecate/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@aetherBytes/snakebytes",
+  "name": "@aetherBytes/nullblock",
   "version": "0.0.1",
   "type": "module",
   "scripts": {
@@ -14,8 +14,7 @@
     "lint:format": "eslint --fix --ext \".ts,.tsx\" \"src/**/*.{ts,tsx,*.ts,*tsx}\"",
     "style:check": "stylelint \"src/**/*.{css,scss}\"",
     "style:format": "stylelint --fix \"src/**/*.{css,scss}\"",
-    "ts:check": "tsc --project ./tsconfig.json --skipLibCheck --noemit",
-    "prepare": "husky"
+    "ts:check": "tsc --project ./tsconfig.json --skipLibCheck --noemit"
   },
   "dependencies": {
     "@lomray/consistent-suspense": "^2.0.2",
@@ -58,7 +57,6 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "husky": "^9.0.10",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
     "sass": "^1.70.0",
