--- a/svc/hecate/Dockerfile
+++ b/svc/hecate/Dockerfile
@@ -3,7 +3,6 @@ FROM node:18.13.0-alpine
 ARG RUN_TYPE=ssr
 ARG ENV_MODE=production
 ARG WEB_PATH=/var/www
-ARG BUILD_PATH
 
 ENV NODE_ENV=${ENV_MODE}
 ENV TYPE=${RUN_TYPE}
@@ -12,7 +11,7 @@ RUN mkdir -p $WEB_PATH
 
 WORKDIR $WEB_PATH
 
-COPY ${BUILD_PATH} $WEB_PATH/build
+COPY ./build $WEB_PATH/build
 COPY ./package.json $WEB_PATH/package.json
 COPY ./package-lock.json $WEB_PATH/package-lock.json
 
