--- a/svc/hecate/Dockerfile
+++ b/svc/hecate/Dockerfile
@@ -11,9 +11,9 @@ RUN mkdir -p $WEB_PATH
 
 WORKDIR $WEB_PATH
 
-COPY **/build $WEB_PATH/build
-COPY **/package.json $WEB_PATH/package.json
-COPY **/package-lock.json $WEB_PATH/package-lock.json
+COPY svc/hecate/build $WEB_PATH/build
+COPY svc/hecate/package.json $WEB_PATH/package.json
+COPY svc/hecate/package-lock.json $WEB_PATH/package-lock.json
 
 
 RUN npm ci --omit=dev
