--- a/.github/workflows/ssr-boost-build.yml
+++ b/.github/workflows/ssr-boost-build.yml
@@ -13,7 +13,7 @@ on:
       docker-file:
         required: false
         type: string
-        default: svc/hecate/node_modules/@lomray/vite-ssr-boost/workflow/Dockerfile
+        default: svc/hecate/Dockerfile
       should-skip-eslint:
         required: false
         type: boolean
@@ -99,7 +99,7 @@ jobs:
         with:
           name: build-artifact
           path: |
-            ${{ inputs.service-path }}/dist
+            ${{ inputs.service-path }}
             build
             package.json
             package-lock.json
