--- a/.github/workflows/ssr-boost-build.yml
+++ b/.github/workflows/ssr-boost-build.yml
@@ -99,6 +99,7 @@ jobs:
         with:
           name: build-artifact
           path: |
+            ${{ inputs.service-path }}/
             build
             package.json
             package-lock.json
