--- a/svc/hecate/package.json
+++ b/svc/hecate/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@aetherBytes/nullblock",
+  "name": "@aetherBytes/beerus",
   "version": "0.0.1",
   "type": "module",
   "scripts": {
@@ -22,17 +22,21 @@
     "@lomray/react-mobx-manager": "^3.0.1",
     "@lomray/react-route-manager": "^2.0.0",
     "@lomray/vite-ssr-boost": "^2.3.1",
+    "autoprefixer": "^10.4.18",
     "axios": "^1.6.7",
     "classnames": "^2.5.1",
     "cookie-parser": "^1.4.6",
+    "framer-motion": "^9.0.7",
     "isbot": "^4.4.0",
     "js-cookie": "^3.0.5",
     "mobx": "^6.12.0",
     "mobx-react-lite": "^4.0.5",
+    "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loading-skeleton": "^3.4.0",
-    "react-router-dom": "^6.22.0"
+    "react-router-dom": "^6.22.0",
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "@actions/core": "^1.10.1",
