--- a/.github/workflows/pr-check-hecate.yml
+++ b/.github/workflows/pr-check-hecate.yml
@@ -18,27 +18,37 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      # Assuming the lock file's directory is relative to the repo root.
+      # Update the 'run' commands to navigate to the directory containing your lock file.
       - run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" > ~/.npmrc
-
+        working-directory: root/svc/hecate/
+        
       - uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
+          cache-dependency-path: root/svc/hecate/package-lock.json
 
       - name: Install dependencies
         run: npm ci
+        working-directory: root/svc/hecate/
 
       - name: Check eslint
         run: npm run lint:check
+        working-directory: root/svc/hecate/
 
       - name: Typescript check
         run: npm run ts:check
+        working-directory: root/svc/hecate/
 
       - name: Stylelint check
         run: npm run style:check
+        working-directory: root/svc/hecate/
 
       - name: Build check
         run: npm run build -- --throw-warnings
+        working-directory: root/svc/hecate/
 
       - name: Commit lint PR title
         run: echo "${{ github.event.pull_request.title }}" | npx --no-install commitlint -g commitlint.config.js
+
