working dir to commit

--- a/.github/workflows/pr-check-hecate.yml
+++ b/.github/workflows/pr-check-hecate.yml
@@ -49,4 +49,4 @@ jobs:
 
       - name: Commit lint PR title
         run: echo "${{ github.event.pull_request.title }}" | npx --no-install commitlint -g commitlint.config.js
-
+        working_dir: svc/hecate/
