--- a/.github/workflows/pr-check-hecate.yml
+++ b/.github/workflows/pr-check-hecate.yml
@@ -48,5 +48,6 @@ jobs:
         working-directory: svc/hecate/
 
       - name: Commit lint PR title
-        run: echo "${{ github.event.pull_request.title }}" | npx --no-install commitlint -g commitlint.config.js
+        run: echo "${{ github.event.pull_request.title }}" | npx --no-install
+        # run: echo "${{ github.event.pull_request.title }}" | npx --no-install commitlint -g commitlint.config.js
         working-directory: svc/hecate/
