--- a/svc/hecate/package.json
+++ b/svc/hecate/package.json
@@ -22,6 +22,9 @@
     "@lomray/react-mobx-manager": "^3.0.1",
     "@lomray/react-route-manager": "^2.0.0",
     "@lomray/vite-ssr-boost": "^2.3.1",
+    "@splinetool/loader": "^1.0.93",
+    "@splinetool/react-spline": "^2.2.6",
+    "@splinetool/runtime": "^1.0.93",
     "autoprefixer": "^10.4.18",
     "axios": "^1.6.7",
     "classnames": "^2.5.1",
