--- a/svc/helios/pyproject.toml
+++ b/svc/helios/pyproject.toml
@@ -14,11 +14,13 @@ readme = "README.md"
 authors = [
     {name = "PervySoftware", email = "your.email@example.com"}
 ]
+
 dependencies = [
-    "solana",  # Assuming you're using solana-py for your Solana interactions
-    "requests",  # For making HTTP requests to APIs
-    # "pandas",  # For data manipulation and analysis
-    # "matplotlib",  # For plotting if needed
+    "solana==0.28.0",  # Version specified for stability
+    "requests",  # For making HTTP requests if needed
+    "pandas==1.5.3",  # For data manipulation
+    "websockets==10.4",  # For WebSocket server functionality
+    "json==2.0.9"  # For JSON operations
 ]
 
 [tool.hatch.build.targets.wheel]
