--- a/svc/helios/pyproject.toml
+++ b/svc/helios/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "requests==2.32.3",  # For making HTTP requests if needed
     "pandas==2.2.3",  # For data manipulation
     "websockets>=9.0,<12.0",  # For WebSocket server functionality
+    "solders>=0.21.0,<0.22.0",  # For soldering
 ]
 
 [tool.hatch.build.targets.wheel]
