--- a/svc/helios/pyproject.toml
+++ b/svc/helios/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "pandas==2.2.3",  # For data manipulation
     "websockets>=9.0,<12.0",  # For WebSocket server functionality
     "solders>=0.21.0,<0.22.0",  # For soldering
+    "python-dotenv>=1.0.1",  # For loading environment variables
 ]
 
 [tool.hatch.build.targets.wheel]
