--- a/svc/helios/pyproject.toml
+++ b/svc/helios/pyproject.toml
@@ -2,7 +2,6 @@
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-readme = "README.md"
 
 [project]
 name = "helios"
@@ -12,6 +11,8 @@ readme = "README.md"
 authors = [
     {name = "PervySoftware", email = "your.email@example.com"}
 ]
+
+requires-python = ">=3.12"
 
 dependencies = [
     "solana==0.35.1",  # Version specified for stability
@@ -30,6 +31,7 @@ dependencies = [
     "pytest",  # For testing
     "mypy",  # For static type checking
     "ruff",  # For linting
+    "pip-tools",  # For managing dependencies
 ]
 
 [tool.mypy]
@@ -71,9 +73,6 @@ exclude = [
 # Same as Black.
 line-length = 88
 indent-width = 4
-
-# Assume Python 3.8
-target-version = "py38"
 
 [tool.ruff.lint]
 # Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
