--- a/svc/helios/requirements.txt
+++ b/svc/helios/requirements.txt
@@ -4,8 +4,13 @@
 #
 #    pip-compile --output-file=requirements.txt pyproject.toml
 #
+annotated-types==0.7.0
+    # via pydantic
 anyio==4.8.0
-    # via httpx
+    # via
+    #   httpx
+    #   starlette
+    #   watchfiles
 certifi==2024.12.14
     # via
     #   httpcore
@@ -13,14 +18,22 @@ certifi==2024.12.14
     #   requests
 charset-normalizer==3.4.1
     # via requests
+click==8.1.8
+    # via uvicorn
 construct==2.10.68
     # via construct-typing
 construct-typing==0.5.6
     # via solana
+fastapi==0.115.6
+    # via helios (pyproject.toml)
 h11==0.14.0
-    # via httpcore
+    # via
+    #   httpcore
+    #   uvicorn
 httpcore==1.0.7
     # via httpx
+httptools==0.6.4
+    # via uvicorn
 httpx==0.28.1
     # via solana
 idna==3.10
@@ -34,12 +47,20 @@ numpy==2.2.1
     # via pandas
 pandas==2.2.3
     # via helios (pyproject.toml)
+pydantic==2.10.5
+    # via fastapi
+pydantic-core==2.27.2
+    # via pydantic
 python-dateutil==2.9.0.post0
     # via pandas
 python-dotenv==1.0.1
-    # via helios (pyproject.toml)
+    # via
+    #   helios (pyproject.toml)
+    #   uvicorn
 pytz==2024.2
     # via pandas
+pyyaml==6.0.2
+    # via uvicorn
 requests==2.32.3
     # via helios (pyproject.toml)
 six==1.17.0
@@ -52,16 +73,28 @@ solders==0.21.0
     # via
     #   helios (pyproject.toml)
     #   solana
+starlette==0.41.3
+    # via fastapi
 typing-extensions==4.12.2
     # via
     #   anyio
+    #   fastapi
+    #   pydantic
+    #   pydantic-core
     #   solana
     #   solders
 tzdata==2024.2
     # via pandas
 urllib3==2.3.0
     # via requests
+uvicorn[standard]==0.34.0
+    # via helios (pyproject.toml)
+uvloop==0.21.0
+    # via uvicorn
+watchfiles==1.0.4
+    # via uvicorn
 websockets==11.0.3
     # via
     #   helios (pyproject.toml)
     #   solana
+    #   uvicorn
