--- a/svc/helios/pyproject.toml
+++ b/svc/helios/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "python-dotenv>=1.0.1",  # For loading environment variables
     "fastapi==0.115.6",  # For the FastAPI server
     "uvicorn[standard]==0.34.0",  # For running the FastAPI server
+    "python-json-logger==3.2.1",  # For logging
 ]
 
 [tool.hatch.build.targets.wheel]
@@ -39,7 +40,6 @@ dependencies = [
 [tool.mypy]
 strict = true
 ignore_missing_imports = true
-
 
 [tool.ruff]
 # Exclude a variety of commonly ignored directories.
