base api.tsx and echo plug in

--- a/svc/hecate/tsconfig.json
+++ b/svc/hecate/tsconfig.json
@@ -29,7 +29,7 @@
       "@constants/*": ["./constants/*"],
       "@interfaces/*": ["./interfaces/*"],
       "@pages/*": ["./pages/*"],
-      "@routes/*": ["./routes/*"]
+      "@routes/*": ["./routes/*"],
     }
   },
   "include": ["src", "types", "vite.config.ts"],
