no phantom on refresh

--- a/svc/hecate/package.json
+++ b/svc/hecate/package.json
@@ -28,8 +28,10 @@
     "@splinetool/loader": "^1.0.93",
     "@splinetool/react-spline": "^2.2.6",
     "@splinetool/runtime": "^1.0.93",
+    "@wallet-standard/react": "^1.0.0",
+    "@wallet-standard/solana": "^0.1.0-alpha.4",
     "autoprefixer": "^10.4.18",
-    "axios": "^1.6.7",
+    "axios": "^1.7.9",
     "classnames": "^2.5.1",
     "cookie-parser": "^1.4.6",
     "framer-motion": "^9.0.7",
