--- a/svc/hecate/package.json
+++ b/svc/hecate/package.json
@@ -22,6 +22,7 @@
     "@lomray/react-mobx-manager": "^3.0.1",
     "@lomray/react-route-manager": "^2.0.0",
     "@lomray/vite-ssr-boost": "^2.3.1",
+    "@phantom/wallet-sdk": "^0.1.1",
     "@react-three/drei": "^9.105.3",
     "@react-three/fiber": "^8.16.1",
     "@solana/web3.js": "^1.98.0",
