--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -2,15 +2,7 @@ source "https://rubygems.org"
 
 gem "jekyll", "~> 4.3.0"
 gem "jekyll-theme-cayman", "~> 0.2.0"
-gem "jekyll-feed", "~> 0.17.0"
-gem "jekyll-seo-tag", "~> 2.8.0"
-gem "jekyll-sitemap", "~> 1.4.0"
-
-group :jekyll_plugins do
-  gem "jekyll-feed", "~> 0.17.0"
-  gem "jekyll-seo-tag", "~> 2.8.0"
-  gem "jekyll-sitemap", "~> 1.4.0"
-end
+gem "webrick", "~> 1.7"
 
 # Windows and JRuby does not include zoneinfo files, so bundle the tzinfo-data gem
 # and associated library.
